# AcceleratorModule

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  config.py  pyproject.toml  setup.cfg  test.py  train_translator.py  trainer.py
.github/workflows/: pre-commit.yml
docs/: README.md  hps_config.md  hps_file_config.md  module_structure.md  requirements.txt  trainer.md  trainer_for_huggingface.md
docs/source/: api.rst  conf.py  installation.rst
dummy_model/best_accuracy/: pytorch_model.pt  status.json
dummy_model/checkpoint/: status.json
dummy_model/checkpoint/checkpoint/: custom_checkpoint_0.pkl  random_states_0.pkl
examples/: dummy_dataset.py  dummy_metric.py  dummy_model.py  from_huggingface.py  hps_example.yaml  specific_scheduler.py  train.py  train_without_comments.py
src/accmt/: __init__.py  accmt.py  callbacks.py  collate_fns.py  config.py  curriculum.py  dataloader_samplers.py  debug_timings.py  decorators.py  dist_utils.py  evaluator.py  events.py  handlers.py  hp_search.py  hyperparameters.py  loggers.py  metrics.py  model_wrapper.py  modules.py  monitor.py  optimizations.py  samplers.py  states.py  test.py  tqdm.py  tracker.py  train_techniques.py  trainer.py  tunnel.py  utility.py  utils.py
src/accmt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/accmt/pipeline/: training.py
src/accmt/utils/: __init__.py  availability.py  data.py  distributed.py  globals.py  maps.py  misc.py  seed.py  tensor.py
src/cli/: accmt.py  launch.py  parser.py  utils.py
src/cli/config/: ddp-fp32.yaml  ddp-fp8.yaml  ddp.yaml  deepspeed-0-bf16.yaml  deepspeed-0-fp16.yaml  deepspeed-0-fp8.yaml  deepspeed-0.yaml  deepspeed-1-bf16.yaml  deepspeed-1-fp16.yaml  deepspeed-1-fp8.yaml  deepspeed-1.yaml  deepspeed-2-bf16-cpu-cpu.yaml  deepspeed-2-bf16-cpu-none.yaml  deepspeed-2-bf16-cpu-nvme.yaml  deepspeed-2-bf16-none-cpu.yaml  deepspeed-2-bf16-none-none.yaml  deepspeed-2-bf16-none-nvme.yaml  deepspeed-2-bf16-nvme-cpu.yaml  deepspeed-2-bf16-nvme-none.yaml  deepspeed-2-bf16-nvme-nvme.yaml  deepspeed-2-fp16-cpu-cpu.yaml  deepspeed-2-fp16-cpu-none.yaml  deepspeed-2-fp16-cpu-nvme.yaml  deepspeed-2-fp16-none-cpu.yaml  deepspeed-2-fp16-none-nvme.yaml  (+67 more)
src/tests/: __init__.py  artifact_test.yml  curriculum.py  dummy_callbacks.py  dummy_dataset.py  dummy_datasets.py  dummy_metrics.py  dummy_model.py  dummy_modules.py  train.py  train_extended.py  trainer.py  utils.py
(+9 files in other folders)
