[metadata]
name = accmt
version = 1.1.9.1
author = ghanvert
author_email = martin.pizarro@cenia.cl
description = Accelerator Module and Trainer based on Accelerate library for simple distributed train processes, inspired by PyTorch Lightning.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghanvert/AcceleratorModule
project_urls = 
    Bug Tracker = https://github.com/ghanvert/AcceleratorModule/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

install_requires =
    accelerate
    numpy
    PyYAML
    accmt-cli
    pympler
    numba

[options.packages.find]
where = src
